# pcbu-natives-old

./: .gitignore  README.md
common-cpp/: AppStorage.h  BTUtils.h  FCMUtils.cpp  FCMUtils.h  I18n.cpp  I18n.h  Logger.h  UnlockState.h
common-cpp/api/: api.cpp  api.h  bt_api.cpp  bt_api.h
common-cpp/clients/: BTUnlockClient.cpp  BTUnlockClient.h  TCPUnlockClient.cpp  TCPUnlockClient.h
common-cpp/handler/: KeyScanner.cpp  KeyScanner.h  PairedDevice.h  UnlockHandler.cpp  UnlockHandler.h
common-cpp/servers/: BaseUnlockServer.h
common-cpp/servers/tcp/: UnlockServer.cpp  UnlockServer.h
common-cpp/src/: I18n.cpp  I18n.h  Logger.cpp  Logger.h
common-cpp/src/api/: api.cpp  api.h  bt_api.cpp  bt_api.h
common-cpp/src/connection/: BaseUnlockServer.cpp  BaseUnlockServer.h
common-cpp/src/connection/clients/: BTUnlockClient.cpp  BTUnlockClient.h  TCPUnlockClient.cpp  TCPUnlockClient.h
common-cpp/src/connection/servers/: TCPUnlockServer.cpp  TCPUnlockServer.h
common-cpp/src/handler/: KeyScanner.cpp  KeyScanner.h  UnlockHandler.cpp  UnlockHandler.h  UnlockState.h
common-cpp/src/storage/: AppStorage.cpp  AppStorage.h  PairedDevice.cpp  PairedDevice.h
common-cpp/src/utils/: BTUtils.cpp  BTUtils.h  CryptUtils.cpp  CryptUtils.h  Utils.cpp  Utils.h
common-cpp/utils/: CryptUtils.h  Utils.h
pam-pcbiounlock/: CMakeLists.txt  install.sh
pam-pcbiounlock/pcbu-auth/: CMakeLists.txt  common-cpp  install.sh  main.cpp
pam-pcbiounlock/pcbu-auth/src/: main.cpp
pam-pcbiounlock/src/: pam_account.c  pam_auth.cpp  pam_password.c  pam_session.c
win-pcbiounlock/: CMakeLists.txt  common-cpp  install.bat  resources.rc  uninstall.bat  win-pcbiounlock.def
win-pcbiounlock/scripts/: install.bat
win-pcbiounlock/src/: CSampleProvider.cpp  CSampleProvider.h  CUnlockCredential.cpp  CUnlockCredential.h  CUnlockListener.cpp  CUnlockListener.h  Dll.cpp  WinUtils.h  common.h  guid.h  helpers.h  resource.rc
win-pcbiounlock/test/: CMakeLists.txt  Test.cpp
win-pcbiounlock/win-pcbiounlock/: Register.reg  Unregister.reg  win-pcbiounlock.sln  win-pcbiounlock.vcxproj  win-pcbiounlock.vcxproj.filters
win-pcbiounlock/win-pcbiounlock/src/: CMessageCredential.cpp  CMessageCredential.h  CSampleProvider.cpp  CSampleProvider.h  CUnlockCredential.cpp  CUnlockCredential.h  CUnlockListener.cpp  CUnlockListener.h
win-pcbiounlock/win-pcbiounlock/test/: Test.cpp  Test.vcxproj  Test.vcxproj.filters
